<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:theme="@style/Base.Theme.MaterialComponents.Light"
    tools:context=".RegisterActivity">

    <Button
        android:id="@+id/buttonResetPassword"
        style="@android:style/Widget.Holo.Light.Button"
        android:layout_width="273dp"
        android:layout_height="48dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="216dp"
        android:text="@string/Register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordAgain"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextUserName"
        style="@android:style/Widget.Holo.Light.EditText"
        android:layout_width="273dp"
        android:layout_height="40dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="87dp"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/UserName"
        android:inputType="textEmailAddress"
        android:padding="4dp"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorHighlight="@color/common_google_signin_btn_text_dark_default"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        android:textColorLink="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPassword"
        style="@android:style/Widget.Holo.Light.EditText"
        android:layout_width="273dp"
        android:layout_height="40dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="88dp"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="numberPassword"
        android:padding="4dp"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorHighlight="@color/common_google_signin_btn_text_dark_default"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        android:textColorLink="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserName" />

    <EditText
        android:id="@+id/editTextPasswordAgain"
        style="@android:style/Widget.Holo.Light.EditText"
        android:layout_width="273dp"
        android:layout_height="40dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="14dp"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/PasswordAgain"
        android:inputType="numberPassword"
        android:padding="4dp"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorHighlight="@color/common_google_signin_btn_text_dark_default"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        android:textColorLink="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintBottom_toTopOf="@+id/buttonResetPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <ImageView
        android:id="@+id/imageViewProfilePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="128dp"
        tools:layout_editor_absoluteY="40dp"
        tools:srcCompat="@tools:sample/avatars" />

</android.support.constraint.ConstraintLayout>